# GIS_DL_TOOL

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  setup_vcpkg.ps1  vcpkg.json
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  release.yml
cmake/: copy_gui_runtime.cmake.in  copy_if_exists.cmake  copy_runtime_dlls.cmake.in  cross_tool_alignment_check.cmake  gis_aiConfig.cmake.in  gis_ai_runtime_dlls.cmake  install_runtime_deps.cmake.in
docker/: Dockerfile.dev
docs/: AI + C++ GIS 算法库开发计划（可下载完整MD版）.md  AI+C++ GIS算法库需求分析报告.md  Doxyfile  GIS_AI_算法库_功能补充规划.md  GIS_TOOL_对齐验收清单.md  PROJECT_PROGRESS.md  api_reference.md  architecture.md  cpp_api_reference.md  error_codes.md  testing.md  third_party_licenses.md  user_manual.md  下一阶段开发优先级清单.md  实用化功能路线图.md  架构设计文档.md  用户手册.md
docs/superpowers/plans/: 2026-04-24-project-stabilization.md  2026-04-24-单类别二值分割全流程.md  2026-05-11-productization-gui.md  2026-05-12-gis-dl-tool-current-phase-execution.md  2026-05-12-gis-dl-tool-productization-against-gis-tool.md  2026-05-17-cli契约与项目收口实施计划.md
docs/superpowers/specs/: 2026-04-24-单类别二值分割全流程-design.md  2026-05-12-gis-dl-tool-productization-against-gis-tool-design.md
docs/算法说明/: 总览.md
docs/算法说明/坐标与点云/: 坐标转换.md  点云滤波.md  点云降采样.md
docs/算法说明/数据预处理/: 栅格归一化.md  栅格裁剪.md  栅格重采样.md
docs/算法说明/栅格处理/: 掩膜转矢量.md  栅格镶嵌.md  栅格阈值分割.md
docs/算法说明/模型推理/: 大图分割.md  批量推理.md  模型推理.md
docs/算法说明/矢量处理/: 矢量拓扑检查.md  矢量相交.md  矢量简化.md  矢量缓冲区.md  矢量裁剪.md
examples/: CMakeLists.txt  demo_config.cpp  demo_gis_ops.cpp  demo_segmentation.cpp
examples/installed_package/: CMakeLists.txt  README.md
include/gis_ai/: export.h  gis_ai.h  version.h.in
packaging/: build_installer.ps1
packaging/nsis/: installer.nsi
resources/: app.rc  app.rc.in
schemas/: task-config.schema.json
scripts/: create_test_e2e_data.py  generate_test_data.ps1  generate_test_data.sh  gis_ai_ctypes.py  prepare_test_model.ps1  prepare_test_model.sh  test_ctypes.py
scripts/test_e2e_data/: test_input.tif  test_output_seg.dbf  test_output_seg.tif  test_seg_model.onnx
src/: c_api.cpp
src/ai/: inference_engine.cpp  inference_engine.h  mask_to_polygon.cpp  mask_to_polygon.h  model_manager.cpp  model_manager.h  ort_context.cpp  ort_context.h  postprocess.cpp  postprocess.h  preprocess.cpp  preprocess.h
src/cli/: main.cpp
src/core/: config.cpp  config.h  exception.cpp  exception.h  logger.cpp  logger.h  memory.cpp  memory.h  platform.cpp  platform.h
src/fusion/: batch_processor.cpp  batch_processor.h  large_image_seg.cpp  large_image_seg.h  raster_seg.cpp  raster_seg.h  task_config.cpp  task_config.h
src/gis/: coord_transform.cpp  coord_transform.h  geos_utils.h  pc_downsample.cpp  pc_downsample.h  pc_filter.cpp  pc_filter.h  raster_clip.cpp  raster_clip.h  raster_mosaic.cpp  raster_mosaic.h  raster_normalize.cpp  raster_normalize.h  raster_resample.cpp  raster_resample.h  raster_threshold.cpp  raster_threshold.h  vector_buffer.cpp  vector_buffer.h  vector_clip.cpp  vector_clip.h  vector_intersect.cpp  vector_intersect.h  vector_simplify.cpp  vector_simplify.h  vector_topology.cpp  vector_topology.h
src/gui/: CMakeLists.txt  action_dispatcher.cpp  action_dispatcher.h  batch_mode_controller.cpp  batch_mode_controller.h  crs_dialog.cpp  crs_dialog.h  data_inspector.cpp  data_inspector.h  execute_worker.cpp  execute_worker.h  execution_controller.cpp  execution_controller.h  gdal_config.cpp  gdal_config.h  gui_data_support.cpp  gui_data_support.h  gui_log_sink.h  icon_manager.cpp  icon_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  nav_panel.cpp  nav_panel.h  param_card_widget.cpp  param_card_widget.h  param_utils.h  param_widget.cpp  param_widget.h  progress_dialog.cpp  progress_dialog.h  qt_progress_reporter.cpp  qt_progress_reporter.h  settings_manager.cpp  settings_manager.h  style_constants.cpp  style_constants.h  task_center_page.cpp  task_center_page.h  (+6 more)
src/io/: gdal_utils.h  io_factory.cpp  io_factory.h  pointcloud_io.cpp  pointcloud_io.h  raster_io.cpp  raster_io.h  vector_io.cpp  vector_io.h
test_data/: README.md
test_data/real/: test_remote_sensing_1024x1024.tif
tests/: CMakeLists.txt  gui_regression_helpers.cmake  prepare_ai_test_model.cmake  run_gui_invalid_param_regression.cmake  run_gui_smoke_test.cmake  run_installed_gui_inference_regression.cmake  run_installed_gui_preprocess_regression.cmake  run_installed_gui_segment_regression.cmake  run_installed_gui_vector_regression.cmake  test_action_dispatcher.cpp  test_ai.cpp  test_ai_integration.cpp  test_c_api.cpp  test_cli.cpp  test_core.cpp  test_fusion.cpp  test_gis.cpp  test_gui_data_support.cpp  test_gui_output_path.cpp  test_gui_queue.cpp  test_gui_task_database.cpp  test_io.cpp  test_io_integration.cpp  verify_release_install_tree.cmake  verify_release_package_consumer.ps1
tests/package_consumer/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  benchmark.cpp  export_segformer_landcover.py  export_unet_building.py  generate_test_data.cpp  generate_test_image.py  verify_onnx_model.cpp
vcpkg-overlay/onnx/: disable-dbg-schema-assert.patch  portfile.cmake  vcpkg.json
